[package]
name = "crypto_rs"
version = "0.1.0"
edition = "2021"


[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-cron = "0.1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
dotenv = "0.15"
